[package]
name = "p2p_test"
version = "0.1.0"
authors = ["Alexey Karasev <karasev.alexey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = "0.31"
log = "0.4"
derive_more = "0.14"
env_logger = "0.8"
async-std = { version = "1.7", features = ["attributes"] }
futures = "0.3"